--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -21,10 +21,10 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: date_start
-                  type: datetime
+                  type: date
               - column:
                   name: date_finish
-                  type: datetime
+                  type: date
               - column:
                   name: active
                   type: boolean
@@ -74,11 +74,11 @@ databaseChangeLog:
 
               - column:
                   name: date_start
-                  value: "2019-11-04 20:32:59.390583"
+                  value: "2019-11-04"
 
               - column:
                   name: date_finish
-                  value: "2019-12-04 20:32:59.390583"
+                  value: "2019-12-04"
 
               - column:
                   name: active
